--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="description" content="Smart University Transportation Management System" />
     <meta name="author" content="PU RideConnect Team" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="theme-color" content="#ffffff" />
+
     <meta property="og:title" content="PU RideConnect" />
     <meta property="og:description" content="Smart University Transportation Management System" />
     <meta property="og:type" content="website" />
